# GameOfLife

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
src/: main.cpp
